# maowbot

./: .env  .gitignore  008_osc_toggles.sql  CLAUDE.md  Cargo.toml  GRPC_MIGRATION.md  TAB_COMPLETION_IMPLEMENTATION.md  TAB_COMPLETION_PLAN.md  UI_ARCHITECTURE_PROPOSAL.md  build.rs  readme.md  run-tui.sh  test_account_list.sh  test_ai_config.sh  test_ai_grpc.rs  test_ai_service.sh  test_shutdown.sh  test_tab_completion.sh
maowbot-ai/: Cargo.toml
maowbot-ai/src/: client.rs  function.rs  lib.rs  memory.rs  models.rs  provider.rs  traits.rs
maowbot-ai/src/plugins/: ai_service.rs  ai_service_stub.rs
maowbot-common/: Cargo.toml
maowbot-common-ui/: Cargo.toml
maowbot-common-ui/src/: grpc.rs  grpc_client.rs  lib.rs  process_manager.rs
maowbot-common-ui/src/commands/: account.rs  ai.rs  command.rs  config.rs  connectivity.rs  discord.rs  drip.rs  member.rs  mod.rs  obs.rs  osc.rs  pipeline.rs  platform.rs  plugin.rs  redeem.rs  twitch.rs  user.rs  vrchat.rs
maowbot-common-ui/src/completion/: context.rs  engine.rs  mod.rs
maowbot-common-ui/tests/: test_osc_completion.rs
maowbot-common/src/: error.rs  lib.rs
maowbot-common/src/models/: ai.rs  analytics.rs  auth.rs  cache.rs  command.rs  credential.rs  discord.rs  drip.rs  event_pipeline.rs  link_request.rs  mod.rs  osc.rs  osc_toggle.rs  platform.rs  plugin.rs  redeem.rs  user.rs  user_analysis.rs  vrchat.rs
maowbot-common/src/traits/: api.rs  auth_traits.rs  event_pipeline_traits.rs  mod.rs  osc_toggle_traits.rs  platform_traits.rs  repository_traits.rs
maowbot-core/: Cargo.toml
maowbot-core/src/: error.rs  http.rs  lib.rs
maowbot-core/src/auth/: callback_server.rs  manager.rs  mod.rs  user_manager.rs  user_manager_tests.rs
maowbot-core/src/cache/: message_cache.rs  mod.rs
maowbot-core/src/crypto/: mod.rs
maowbot-core/src/db/: mod.rs  postgres_embedded.rs
maowbot-core/src/eventbus/: db_logger.rs  db_logger_handle.rs  mod.rs
maowbot-core/src/models/: command.rs  drip.rs  mod.rs  redeem.rs  user_analysis.rs
maowbot-core/src/plugins/: bot_api.rs  botapi_impl.rs  manager.rs  mod.rs  plugin_connection.rs  service_grpc.rs  types.rs
maowbot-core/src/repositories/: mod.rs
maowbot-core/src/services/: command_service.rs  event_context.rs  event_handler.rs  event_pipeline_service.rs  event_registry.rs  message_sender.rs  message_service.rs  mod.rs  osc_toggle_service.rs  redeem_service.rs  user_service.rs
maowbot-core/src/tasks/: autostart.rs  biweekly_maintenance.rs  cache_maintenance.rs  credential_refresh.rs  daily_maintenance.rs  discord_live_role.rs  mod.rs  monthly_maintenance.rs  redeem_sync.rs
maowbot-core/src/test_utils/: helpers.rs  mod.rs
maowbot-core/src/utils/: time.rs
maowbot-core/src/vrchat_osc/: manager.rs  mod.rs  runtime.rs
maowbot-core/tests/: auth_tests.rs  cache_tests.rs  credential_tests.rs  db_tests.rs  eventbus_tests.rs  helpers.rs  mod.rs  monthly_maintenance_tests.rs  platform_tests.rs  plugin_manager_tests.rs  plugin_services_grpc_tests.rs  repository_tests.rs  services_tests.rs  shutdown_tests.rs  twitch_helix_runtime_tests.rs
maowbot-core/tests/integration/: biweekly_maintenance_tests.rs  credential_tests.rs  db_tests.rs  eventbus_tests.rs  mod.rs  monthly_maintenance_tests.rs  obs_tests.rs  plugin_services_grpc_tests.rs  repository_tests.rs  services_tests.rs  shutdown_command_test.rs  shutdown_tests.rs  user_manager_tests.rs
maowbot-core/tests/test_utils/: helpers.rs  mod.rs
maowbot-core/tests/unit/: auth_manager_tests.rs  auth_tests.rs  cache_tests.rs  mod.rs  platform_tests.rs  plugin_manager_tests.rs  twitch_helix_runtime_tests.rs
maowbot-gui/: Cargo.toml
maowbot-gui/src/: chat_hud.rs  egui_renderer.rs  layout_constants.rs  main.rs  overlay_grpc.rs  process_manager.rs  settings.rs
maowbot-obs/: Cargo.toml
maowbot-obs/src/: client.rs  error.rs  lib.rs  models.rs
maowbot-osc/: Cargo.toml
maowbot-osc/src/: lib.rs  mod.rs
maowbot-osc/src/oscquery/: client.rs  discovery.rs  mod.rs  models.rs  server.rs
maowbot-osc/src/robo/: mod.rs
maowbot-osc/src/vrchat/: avatar_watcher.rs  chatbox.rs  mod.rs
maowbot-overlay/: Cargo.toml  build.rs
maowbot-overlay/src/: chat.rs  chat_hud.rs  ffi.rs  imgui_renderer.rs  keyboard.rs  main.rs  openvr_wrapper.cpp  openvr_wrapper_gl.cpp  openvr_wrapper_stub.cpp  overlay_grpc.rs  vr_layer.rs
maowbot-proto/: Cargo.toml  build.rs
maowbot-proto/proto/: common.proto  plugin.proto
maowbot-proto/proto/services/: ai_service.proto  autostart_service.proto  command_service.proto  config_service.proto  credential_service.proto  discord_service.proto  event_pipeline_service.proto  obs_service.proto  osc_service.proto  platform_service.proto  plugin_service.proto  redeem_service.proto  twitch_service.proto  user_service.proto  vrchat_service.proto
maowbot-proto/src/: lib.rs
maowbot-server/: Cargo.toml
maowbot-server/src/: client.rs  context.rs  main.rs  portable_postgres.rs  server.rs
maowbot-server/src/grpc_services/: ai_service.rs  autostart_service.rs  command_service.rs  config_service.rs  credential_service.rs  discord_service.rs  event_pipeline_service.rs  mod.rs  obs_service.rs  osc_service.rs  platform_service.rs  plugin_service.rs  redeem_service.rs  twitch_service.rs  user_service.rs  vrchat_service.rs
maowbot-tui/: Cargo.toml  SIMULATE_USAGE.md
maowbot-tui/src/: completion.rs  dynamic_completer.rs  lib.rs  main.rs  tui_module.rs  tui_module_simple.rs  unified_completer.rs
maowbot-tui/src/commands/: account.rs  account_adapter.rs  ai.rs  ai_adapter.rs  auth.rs  command.rs  command_adapter.rs  config.rs  config_adapter.rs  connection_adapter.rs  connectivity.rs  connectivity_adapter.rs  credential_adapter.rs  diagnostics_adapter.rs  discord.rs  discord_adapter.rs  dispatch_grpc.rs  drip.rs  drip_adapter.rs  member.rs  member_adapter.rs  mod.rs  obs.rs  obs_adapter.rs  osc.rs  osc_adapter.rs  pipeline.rs  pipeline_adapter.rs  (+21 more)
plugin_hello/: Cargo.toml
plugin_hello/src/: main.rs
plugins/plugin_hello/: Cargo.toml
plugins/tui_plugin/: Cargo.toml
tui_plugin/: Cargo.toml
tui_plugin/src/: lib.rs
(+325 files in other folders)
