[package]
name = "maowbot"
version = "0.1.0"
edition = "2021"

[profile.test]
# ensures the Rust test harness uses only one thread
test-threads = 1

[dependencies]
twitch_api = {  version="^0.7.0-rc", features = ["client", "helix", "reqwest"] }

sqlx = { version = "^0.8", features = ["sqlite","runtime-tokio", "tls-native-tls", "chrono"] }

tokio = { version = "^1.43", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tokio-rustls = "0.26"

rcgen = "^0.13"

chrono = { version = "^0.4", features = ["serde"] }

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

thiserror = "^2.0"
anyhow = "^1.0"
dotenv = "^0.15"

uuid = { version = "^1.12", features = ["v4"] }
async-trait = "^0.1"
mockall = "0.13.1"
reqwest = "^0.12"
aes-gcm = "^0.11.0-pre"
base64 = "^0.22"
rand = { version ="^0.9", features = ["os_rng"] }
rand_core = "^0.9"
serenity = "^0.12"
url = "^2.5"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
clap = {  version = "^4.5", features = ["derive"] }

# gRPC / protobuf:
tonic = { version = "^0.12", features = ["transport", "tls"] }

# --- New or updated below:
tracing = "^0.1"
tracing-subscriber = "^0.3"
rustls-pemfile = "^2.2"
futures-lite = "^2.6"
tempfile = "^3.16"
futures-util = "^0.3"
futures-core = "^0.3"

maowbot-proto = { path = "maowbot-proto" }

[dev-dependencies]
tokio-test = "^0.4"