# maowbot/Cargo.toml  (top-level)
[workspace]
resolver = "2"
members = [
    "maowbot-core",
    "maowbot-proto",
    "maowbot-server",
    "plugins/plugin_hello",
    "plugins/tui_plugin"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
maowbot-proto = { path = "maowbot-proto" }

twitch_api = {  version="^0.7.0-rc", features = ["client", "helix", "reqwest"] }
sqlx = { version = "^0.8", features = ["postgres", "runtime-tokio", "tls-native-tls", "chrono"] }

tokio = { version = "^1.43", features = ["full"] }
tokio-test = { version = "^0.4" }
tokio-stream = { version = "0.1.17", features = ["net"] }

dashmap = "^6.1"
rcgen = "^0.13"

chrono = { version = "^0.4", features = ["serde"] }

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

thiserror = "^2.0"
anyhow = "^1.0"
dotenv = "^0.15"

base64 = "^0.22"
uuid = { version = "^1.12", features = ["v4"] }
rand = { version ="^0.9", features = ["os_rng"] }
rand_core = "^0.9"

oauth2 = { version = "5.0.0", features = ["reqwest"] }
aes-gcm = "^0.11.0-pre"
keyring = { version = "^3.6", features = ["windows-native"] }

async-trait = "^0.1"
mockall = "0.13.1"
reqwest = "^0.12"

serenity = "^0.12"
url = "^2.5"

clap = {  version = "^4.5", features = ["derive"] }

# gRPC / protobuf:
tonic = { version = "^0.12", features = ["transport", "tls"] }
prost = { version = "^0.13"}
prost-types = { version = "^0.13" }

# --- New or updated below:
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"]}
tracing-log = "^0.2"
rustls-pemfile = "^2.2"
futures-lite = "^2.6"
tempfile = "^3.16"
futures-util = "^0.3"
futures-core = "^0.3"

libloading = "^0.8"
