[package]
name = "maowbot-ai"
version.workspace = true
edition.workspace = true

[dependencies]
maowbot-common = { path = "../maowbot-common" }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
regex = "1.10.2"

