[package]
name = "maowbot-common-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
maowbot-proto = { path = "../maowbot-proto" }

tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
crossbeam-channel = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }