[package]
name = "maowbot-common-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
maowbot-proto = { path = "../maowbot-proto" }

tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
crossbeam-channel = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
fuzzy-matcher = "0.3"
chrono = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }