# maowbot-core/Cargo.toml

[package]
name = "maowbot-core"
version.workspace = true
edition.workspace = true

[dependencies]
maowbot-proto = { path = "../maowbot-proto" }

twitch_api = {  workspace = true }

sqlx = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-native-tls = { workspace = true }
native-tls = { workspace = true }

dashmap = { workspace = true }

rcgen = { workspace = true }

chrono = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }

uuid = { workspace = true }
async-trait = { workspace = true }
mockall = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
aes-gcm = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }

#serenity = { workspace = true }
#poise = {  workspace = true }

twilight = { version = "^0.16" }
twilight-gateway = { version = "^0.16", features = ["default"] }
twilight-model = "^0.16"
twilight-http = "^0.16"

url = { workspace = true }
http = { workspace = true }

twitch_oauth2 = { workspace = true }
urlencoding = { workspace = true }

#oauth2 = { workspace = true }
keyring = { workspace = true }

clap = { workspace = true }

# gRPC / protobuf:
tonic = { workspace = true }

# --- New or updated below:
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rustls-pemfile = { workspace = true }
futures-lite = { workspace = true }
tempfile = { workspace = true }
futures-util = { workspace = true }
futures-core = { workspace = true }
libloading = { workspace = true }

axum = { version = "^0.8" }
axum-server = "^0.7"
tower = "^0.5"
tower-http = {  version = "^0.6", features = ["trace"] }
bytes = "1.9.0"
once_cell = "^1.20"
tokio-tungstenite = { version = "^0.26", features = ["rustls-tls-native-roots"] }

[dev-dependencies]
tokio-test = { workspace = true }
