[package]
name = "maowbot_osc"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true}
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

rosc = { version = "^0.11" }

mdns-sd = { version = "^0.13" }
warp = "^0.3"

# Optionally for filesystem watch
notify = "5.1.0"

hyper = { version = "^1.6" }

tokio-util = { workspace = true }
futures-util = { workspace = true }
crossbeam-channel = "^0.5"
