[package]
name = "maowbot_osc"
version.workspace = true
edition.workspace = true

[dependencies]
maowbot-common = { path = "../maowbot-common" }

tokio = { workspace = true }
tokio-stream = { workspace = true}
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
rosc = { workspace = true }

if-addrs = "^0.13"
hostname = "^0.4"
socket2 = { version = "^0.5", features = ["all"] }
warp = "^0.3"

# Optionally for filesystem watch
notify = "5.1.0"

hyper = { version = "^1.6" }

tokio-util = { workspace = true, features = ["compat"] }
futures-util = { workspace = true }
crossbeam-channel = "^0.5"
once_cell = "1.20.3"
futures = "0.3.31"
async-stream = "0.3.6"
anyhow = "1.0.95"
byteorder = "1.5.0"
