[package]
name        = "maowbot-overlay"
version     = "0.1.0"
edition     = "2021"
build       = "build.rs"

[dependencies]
# ── async runtime ───────────────────────────────────────────────────────
tokio         = { workspace = true, features=["rt-multi-thread","macros","sync"] }
tonic         = { workspace = true }
tokio-stream  = { workspace = true }

# ── core ────────────────────────────────────────────────────────────────
maowbot-proto = { path = "../maowbot-proto" }
tracing       = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }  # Added env-filter feature
anyhow        = { workspace = true }
crossbeam-channel = "0.5"

# ── Windows ─────────────────────────────────────────────────────────────
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }

# ── FFI ─────────────────────────────────────────────────────────────────
libc = "0.2"

[build-dependencies]
cc = "1.0"