[package]
name = "maowbot-tui"
version.workspace = true
edition.workspace = true

[dependencies]
maowbot-common = { path = "../maowbot-common" }
maowbot-common-ui = { path = "../maowbot-common-ui" }
maowbot-core = { path = "../maowbot-core" }
maowbot-ai = { path = "../maowbot-ai" }
maowbot-proto = { path = "../maowbot-proto" }
tracing = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
async-trait = { workspace = true }
tracing-subscriber = { workspace = true }

reqwest = { workspace = true }

open = "5.3"

chrono = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
lazy_static = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
rosc = { workspace = true }
colored = "2.1"
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Tab completion support
rustyline = "14.0"
rustyline-derive = "0.10"
dirs = "5.0"

[lib]
name = "maowbot_tui"
crate-type = ["rlib"]
path = "src/lib.rs"

[[bin]]
name = "tui-grpc"
path = "src/main.rs"