[package]
name = "plugin_hello"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "^1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Add these lines for Clap and TLS:
clap = { version = "4.2", features = ["derive"] }
tokio-rustls = "0.23"
rustls = "0.20"    # Must match tokio-rustls’ version; ensure no conflicting versions
rustls-pemfile = "1.0"  # if you need to parse certs, but likely not needed if plugin doesn't load certs
