[package]
name = "plugin_hello"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
anyhow = "^1.0"
tracing = "^0.1"
tracing-subscriber = "^0.3"
clap = { version = "^4.5", features = ["derive"] }

tonic = { version = "^0.12", features = ["transport", "tls"] }

tokio-stream = "^0.1"
maowbot-proto = { path = "../maowbot-proto" }
